# caspian-fish-quality

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  DEPLOY.md  GLOSSARY.md  LICENSE  LIMITATIONS.md  METHODS.md  README.md  REFERENCES.bib  data_2 - HTML Table to Markdown Conversion.csv  data_3 - HTML to Markdown Table Conversion (2).csv  data_4 - HTML Table to Markdown Conversion.csv  data_6 - Fatty Acid Composition Comparison Table.csv  feature_importance_v2.csv  ml_results_v2.csv  pyproject.toml  requirements-demo.txt  synthetic_static (1).csv  synthetic_storage (1).csv
.github/workflows/: ci.yml  pages.yml  release.yml
app/: streamlit_app.py
app/.streamlit/: config.toml
archive/: README.md  syntetic_fish_legacy.ipynb
data/: README.md  silurus_glanis_phd_dataset_v2.csv
demo_artifacts/: README.md  manifest.json  regression_cv_r2.csv  transfer_table_3_5_7.csv  transfer_zero_shot.csv
demo_artifacts/models/: ridge_Bodymass_g.joblib  ridge_Lipids_perc.joblib  ridge_Protein_perc.joblib
docs/: CORRELATION_PRIORS.md  LITERATURE_SOURCES.md  conf.py  index.html  index.md  references.bib
docs/api/: index.md
docs/az/: glossary.md  limitations.md  literature_review.md  methods.md
docs/tutorials/: quickstart.md
notebooks/: README.md  syntetic_fish_cleaned.ipynb
results/section_3_5_3/: README.md  classification_all.csv  classification_cv.csv  feature_importance.csv  marginal_relative_error.csv  ml_results_all.csv  regression_all.csv  tables_az.md  transfer_mape_summary.csv  transfer_zero_shot.csv
scripts/: export_demo_artifacts.py  reproduce_section_3_5_3.py  run_pipeline.py
src/caspian_fish_quality/: __init__.py  config.py
src/caspian_fish_quality/data/: __init__.py  correlation_priors.yaml
src/caspian_fish_quality/data/literature/: README.md  __init__.py  data_1.csv  data_5.csv
src/caspian_fish_quality/demo/: __init__.py  artifacts.py
src/caspian_fish_quality/eda/: __init__.py  parsing.py  regex_extract.py  summary.py
src/caspian_fish_quality/merge/: __init__.py  static.py  storage.py
src/caspian_fish_quality/ml/: __init__.py  cv.py  datasets.py  metrics.py  models.py  pipeline.py
src/caspian_fish_quality/synth/: __init__.py  copula.py  correlation_loader.py  generators.py  moments.py  truncated.py
src/caspian_fish_quality/transfer/: __init__.py  domain_check.py  sturgeon_eval.py
src/caspian_fish_quality/validation/: __init__.py  joint.py  marginal.py  tstr.py  wasserstein.py
tests/: conftest.py  test_config.py  test_copula.py  test_correlation_loader.py  test_datasets.py  test_demo_artifacts.py  test_eda.py  test_generators.py  test_merge.py  test_pipeline_no_leakage.py  test_transfer.py  test_truncated.py  test_validation.py
